force-app/main/default/objects/Krow__Task__c/Krow__Task__c.object-meta.xml
<CustomObject>
    <label>Klient Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Klient Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>