force-app/main/default/objects/Krow__Task__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>To use for better estimated hours</inlineHelpText>
    <label>Actual Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>