force-app/main/default/objects/Krow__Task__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <formula>IF(Checklist_Items__c &gt;0,&quot;✔️&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>There is a checklist attached to complete</inlineHelpText>
    <label>Checklist</label>
    <type>Text</type>
</CustomField>