force-app/main/default/objects/Krow__Task__c/fields/Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Items__c</fullName>
    <label>Checklist Items</label>
    <summaryForeignKey>Task_Checklist_Item__c.Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>