force-app/main/default/objects/Krow__Task__c/fields/Descr__c.field-meta.xml
<CustomField>
    <fullName>Descr__c</fullName>
    <formula>IF( Description_Exists__c , &quot;📄&quot;,&quot;&quot;)</formula>
    <label>Descr</label>
    <type>Text</type>
</CustomField>