force-app/main/default/objects/Krow__Task__c/fields/Description_Exists__c.field-meta.xml
<CustomField>
    <fullName>Description_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Workflow to add Description Link</description>
    <label>Description Exists</label>
    <type>Checkbox</type>
</CustomField>