force-app/main/default/objects/Krow__Task__c/fields/DOW_Due__c.field-meta.xml
<CustomField>
    <fullName>DOW_Due__c</fullName>
    <formula>CASE( MOD(  Krow__Due_Date__c - DATE(1900, 1, 7), 7), 0, &quot;SUN&quot;, 1, &quot;MON&quot;, 2, &quot;TUE&quot;, 3,
&quot;WED&quot;, 4, &quot;THU&quot;, 5, &quot;FRI&quot;, 6, &quot;SAT&quot;,&quot;Error&quot;)</formula>
    <label>DOW Due</label>
    <type>Text</type>
</CustomField>