force-app/main/default/objects/Krow__Task__c/fields/Due_Date_Status__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Status__c</fullName>
    <description>Used in apex class queryAssignedTasks</description>
    <formula>IF(
  Is_a_Parent_Task__c,
  &quot;&quot;,
  IF(
    Krow__Due_Date__c &lt; TODAY(),
    &quot;OVERDUE&quot;,
    IF(
      AND(
        Krow__Start_Date__c &lt;= TODAY(),
        Krow__Due_Date__c &gt;= TODAY()
      ),
      &quot;CURRENT&quot;,
      IF(
        OR(
          Krow__Start_Date__c &lt;= TODAY() + 7,
          Krow__Due_Date__c &lt;= TODAY() + 7
        ),
        &quot;UPCOMING WEEK&quot;,
        &quot;LATER&quot;
      )
    )
  )
)</formula>
    <label>Due Date Status</label>
    <type>Text</type>
</CustomField>