force-app/main/default/objects/Krow__Task__c/fields/Email_Resources_when_Live__c.field-meta.xml
<CustomField>
    <fullName>Email_Resources_when_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Resources when Live</label>
    <type>Checkbox</type>
</CustomField>