force-app/main/default/objects/Krow__Task__c/fields/Flow_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Flow_Identifier__c</fullName>
    <description>This is used in Project and Task Templates. When they are imported into an existing project, this field is used along with the Project Id to select and update Tasks.</description>
    <inlineHelpText>This is used in Project and Task Templates. When they are imported into an existing project, this field is used along with the Project Id to select and update Tasks.</inlineHelpText>
    <label>Flow Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>