force-app/main/default/objects/Krow__Task__c/fields/In_Progress__c.field-meta.xml
<CustomField>
    <fullName>In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Process builder changes status but prevents complete if checklist</description>
    <label>In Progress</label>
    <type>Checkbox</type>
</CustomField>