force-app/main/default/objects/Krow__Task__c/fields/Incomplete_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Checklist__c</fullName>
    <description>delete once removed from flow(Task Update v3)</description>
    <label>deprec_Incomplete_Checklist</label>
    <summaryFilterItems>
        <field>Krow__Task_Checklist__c.Krow__Is_Completed__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Krow__Task_Checklist__c.Krow__Krow_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>