force-app/main/default/objects/Krow__Task__c/fields/Incomplete_Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Checklist_Items__c</fullName>
    <label>Incomplete Checklist Items</label>
    <summaryFilterItems>
        <field>Task_Checklist_Item__c.Is_Completed__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Task_Checklist_Item__c.Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>