force-app/main/default/objects/Krow__Task__c/fields/Is_a_Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Parent_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Parent Task</label>
    <type>Checkbox</type>
</CustomField>