force-app/main/default/objects/Krow__Task__c/fields/Krow__Account__c.field-meta.xml
<CustomField>
    <fullName>Krow__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated customer account for this task, by default equal to the project customer account.</description>
    <inlineHelpText>The associated customer account for this task, by default equal to the project customer account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Klient Tasks</relationshipLabel>
    <relationshipName>Krow_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>