force-app/main/default/objects/Krow__Task__c/fields/Krow__Account_Code_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Krow__Account_Code_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account code mapping value as used with integrations such as Quickbooks.</description>
    <inlineHelpText>Account code mapping value as used with integrations such as Quickbooks.</inlineHelpText>
    <label>Account Code Mapping</label>
    <referenceTo>Krow__Account_Code_Mapping__c</referenceTo>
    <relationshipLabel>Klient Tasks</relationshipLabel>
    <relationshipName>Krow_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>