force-app/main/default/objects/Krow__Task__c/fields/Krow__Accounting_seed_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Accounting_seed_Id__c</fullName>
    <description>Accounting seed Id</description>
    <label>Accounting seed Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>