force-app/main/default/objects/Krow__Task__c/fields/Krow__Act_vs_Est_Budget__c.field-meta.xml
<CustomField>
    <fullName>Krow__Act_vs_Est_Budget__c</fullName>
    <description>The Total Billable Amount - Budgeted Cost of the task.</description>
    <formula>Krow__Total_Billable_Amount__c - Krow__Budgeted_Cost_Task__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Billable Amount - Budgeted Cost of the task.</inlineHelpText>
    <label>Act vs Est Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>