force-app/main/default/objects/Krow__Task__c/fields/Krow__Act_vs_Est_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Act_vs_Est_Hours__c</fullName>
    <description>The task Total Hours - Estimated Hours of the task.</description>
    <formula>Krow__Total_Hours__c - Krow__Estimated_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The task Total Hours - Estimated Hours of the task.</inlineHelpText>
    <label>Act vs Est Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>