force-app/main/default/objects/Krow__Task__c/fields/Krow__Actual_Cost_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Actual_Cost_Task__c</fullName>
    <description>Actual costs of the task calculated as total costs from approved time for this task.</description>
    <inlineHelpText>Actual costs of the task calculated as total costs from approved time for this task.</inlineHelpText>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>