force-app/main/default/objects/Krow__Task__c/fields/Krow__Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Krow__Assigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that assigned this task to a resource (automatically completed).</description>
    <inlineHelpText>The user that assigned this task to a resource (automatically completed).</inlineHelpText>
    <label>Assigned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Krow_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>