force-app/main/default/objects/Krow__Task__c/fields/Krow__Billable__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked this task is marked a Billable Task.   This value defaults from the Project Billable indicator.</description>
    <inlineHelpText>If checked this task is marked a Billable Task.   This value defaults from the Project Billable indicator.</inlineHelpText>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>