force-app/main/default/objects/Krow__Task__c/fields/Krow__Billable_Amount_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billable_Amount_Logged__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total Billable Amount from Saved Timesheets against this Task.</description>
    <inlineHelpText>The total Billable Amount from Saved Timesheets against this Task.</inlineHelpText>
    <label>Billable Amount (Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>