force-app/main/default/objects/Krow__Task__c/fields/Krow__Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billable_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Total Billable Hours from Approved Timesheets against this Task.</description>
    <inlineHelpText>The Total Billable Hours from Approved Timesheets against this Task.</inlineHelpText>
    <label>Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>