force-app/main/default/objects/Krow__Task__c/fields/Krow__Budgeted_Cost_From_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Budgeted_Cost_From_Sub_Tasks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The budgeted cost from sub tasks.</description>
    <inlineHelpText>The budgeted cost from sub tasks.</inlineHelpText>
    <label>Budgeted Cost From Sub Tasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>