force-app/main/default/objects/Krow__Task__c/fields/Krow__Budgeted_Cost_Including_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Budgeted_Cost_Including_Sub_Tasks__c</fullName>
    <description>The Total Budgeted Cost for this Task including Sub-tasks.</description>
    <formula>Krow__Budgeted_Cost_Task__c + Krow__Budgeted_Cost_From_Sub_Tasks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Budgeted Cost for this Task including Sub-tasks.</inlineHelpText>
    <label>Budgeted Cost Including Sub Tasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>