force-app/main/default/objects/Krow__Task__c/fields/Krow__Budgeted_Cost_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Budgeted_Cost_Task__c</fullName>
    <description>The estimated budgeted cost for this task as entered.</description>
    <inlineHelpText>The estimated budgeted cost for this task as entered.</inlineHelpText>
    <label>Budgeted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>