force-app/main/default/objects/Krow__Task__c/fields/Krow__Class__c.field-meta.xml
<CustomField>
    <fullName>Krow__Class__c</fullName>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>