force-app/main/default/objects/Krow__Task__c/fields/Krow__Complete__c.field-meta.xml
<CustomField>
    <fullName>Krow__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when this task is marked Complete.  Automatically checked when the Task Status is set to Complete.</description>
    <inlineHelpText>Checked when this task is marked Complete.  Automatically checked when the Task Status is set to Complete.</inlineHelpText>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>