force-app/main/default/objects/Krow__Task__c/fields/Krow__Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Completion_Date__c</fullName>
    <description>The Completion Date of the task, automatically set when the task is marked complete or the status is set to Completed.</description>
    <inlineHelpText>The Completion Date of the task, automatically set when the task is marked complete or the status is set to Completed.</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>