force-app/main/default/objects/Krow__Task__c/fields/Krow__Constraint_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Constraint_Date__c</fullName>
    <label>Deprecated 5</label>
    <type>Date</type>
</CustomField>