force-app/main/default/objects/Krow__Task__c/fields/Krow__Constraint_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Constraint_Type__c</fullName>
    <label>Constraint Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>As Soon As Possible</fullName>
                <default>true</default>
                <label>As Soon As Possible</label>
            </value>
            <value>
                <fullName>As Late As Possible</fullName>
            </value>
            <value>
                <fullName>Start No Earlier Than</fullName>
            </value>
            <value>
                <fullName>Start No Later Than</fullName>
            </value>
            <value>
                <fullName>Finish No Earlier Than</fullName>
            </value>
            <value>
                <fullName>Finish No Later Than</fullName>
            </value>
            <value>
                <fullName>Must Start On</fullName>
            </value>
            <value>
                <fullName>Must Finish On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>