force-app/main/default/objects/Krow__Task__c/fields/Krow__Create_Event__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this Task will create a Calendar Event which can be integrated to email systems.</description>
    <inlineHelpText>If checked, this Task will create a Calendar Event which can be integrated to email systems.</inlineHelpText>
    <label>Create Event</label>
    <type>Checkbox</type>
</CustomField>