force-app/main/default/objects/Krow__Task__c/fields/Krow__Create_Task_In_Jira__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_Task_In_Jira__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a task will be created in JIRA for this task.  Requires JIRA integration to be configured.</description>
    <inlineHelpText>If checked, a task will be created in JIRA for this task.  Requires JIRA integration to be configured.</inlineHelpText>
    <label>Create Task In Jira</label>
    <type>Checkbox</type>
</CustomField>