force-app/main/default/objects/Krow__Task__c/fields/Krow__Description__c.field-meta.xml
<CustomField>
    <fullName>Krow__Description__c</fullName>
    <description>A description of this task as entered.</description>
    <inlineHelpText>A description of this task as entered.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>