force-app/main/default/objects/Krow__Task__c/fields/Krow__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Due_Date__c</fullName>
    <description>The Due Date of this task as entered or calculated based on the Task Start Date and Duration.</description>
    <inlineHelpText>The Due Date of this task as entered or calculated based on the Task Start Date and Duration.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>