force-app/main/default/objects/Krow__Task__c/fields/Krow__Duration__c.field-meta.xml
<CustomField>
    <fullName>Krow__Duration__c</fullName>
    <description>The calculated Duration of this Task based on the Task Start Date and Due Date, either including or excluding weekends as set.</description>
    <inlineHelpText>The calculated Duration of this Task based on the Task Start Date and Due Date, either including or excluding weekends as set.</inlineHelpText>
    <label>Duration</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>