force-app/main/default/objects/Krow__Task__c/fields/Krow__Duration_Scale__c.field-meta.xml
<CustomField>
    <fullName>Krow__Duration_Scale__c</fullName>
    <description>The Duration Scale of this task as set (Days/Hours/Minutes), the default is Days.</description>
    <inlineHelpText>The Duration Scale of this task as set (Days/Hours/Minutes), the default is Days.</inlineHelpText>
    <label>Duration Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
                <default>true</default>
                <label>Day</label>
            </value>
            <value>
                <fullName>Hour</fullName>
                <isActive>false</isActive>
                <label>Hour</label>
            </value>
            <value>
                <fullName>Minute</fullName>
                <isActive>false</isActive>
                <label>Minute</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>