force-app/main/default/objects/Krow__Task__c/fields/Krow__Enable_Completion_From_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Completion_From_Checklist__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the Task Completion Percentage % will be calculated based on the completion of checklist items with the percentage complete calculated as the number of checklist items completed compared to the total number of checklist items.</description>
    <inlineHelpText>If checked, the Task Completion Percentage % will be calculated based on the completion of checklist items with the percentage complete calculated as the number of checklist items completed compared to the total number of checklist items.</inlineHelpText>
    <label>Enable Task Completion from Checklists</label>
    <type>Checkbox</type>
</CustomField>