force-app/main/default/objects/Krow__Task__c/fields/Krow__End_Time__c.field-meta.xml
<CustomField>
    <fullName>Krow__End_Time__c</fullName>
    <description>The End Time of a Task as entered.</description>
    <inlineHelpText>The End Time of a Task as entered.</inlineHelpText>
    <label>End Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>