force-app/main/default/objects/Krow__Task__c/fields/Krow__Est_vs_Sch_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Est_vs_Sch_Hours__c</fullName>
    <description>Task Estimated Hours - Total Task Scheduled Hours</description>
    <formula>Krow__Estimated_Hours__c - Krow__Scheduled_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Task Estimated Hours - Total Task Scheduled Hours</inlineHelpText>
    <label>Est vs Sch Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>