force-app/main/default/objects/Krow__Task__c/fields/Krow__Estimated_Cost_at_Completion__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Cost_at_Completion__c</fullName>
    <description>Total Cost Amount + the Cost of Estimated Hours Remaining.</description>
    <inlineHelpText>Total Cost Amount + the Cost of Estimated Hours Remaining.</inlineHelpText>
    <label>Estimated Cost at Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>