force-app/main/default/objects/Krow__Task__c/fields/Krow__Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Hours__c</fullName>
    <description>The Estimated Hours to complete this task as entered.</description>
    <inlineHelpText>The Estimated Hours to complete this task as entered.</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>