force-app/main/default/objects/Krow__Task__c/fields/Krow__Estimated_Revenue_At_Completion__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Revenue_At_Completion__c</fullName>
    <description>The Total Billable Amount of all Task Assignments and Hours scheduled for this Task.</description>
    <inlineHelpText>The Total Billable Amount of all Task Assignments and Hours scheduled for this Task.</inlineHelpText>
    <label>Estimated Revenue At Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>