force-app/main/default/objects/Krow__Task__c/fields/Krow__Estimated_Time_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Krow__Estimated_Time_to_Complete__c</fullName>
    <description>The estimated number of hours left to complete this task as entered.</description>
    <inlineHelpText>The estimated number of hours left to complete this task as entered.</inlineHelpText>
    <label>Estimated Hours to Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>