force-app/main/default/objects/Krow__Task__c/fields/Krow__Expected_Revenue_From_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expected_Revenue_From_Sub_Tasks__c</fullName>
    <description>The Expected Revenue for this task as entered.</description>
    <inlineHelpText>The Expected Revenue for sub tasks.</inlineHelpText>
    <label>Expected Revenue From Sub Tasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>