force-app/main/default/objects/Krow__Task__c/fields/Krow__Expected_Revenue_Including_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expected_Revenue_Including_Sub_Tasks__c</fullName>
    <description>The Total Expected Revenue for this Task including Sub-tasks.</description>
    <formula>Krow__Expected_Revenue__c + Krow__Expected_Revenue_From_Sub_Tasks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Expected Revenue for this Task including Sub-tasks.</inlineHelpText>
    <label>Expected Revenue Including Sub Tasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>