force-app/main/default/objects/Krow__Task__c/fields/Krow__External_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__External_Task_ID__c</fullName>
    <description>A Task ID identifier usually representing an ID from a 3rd party system, often used during migration.</description>
    <externalId>true</externalId>
    <inlineHelpText>A Task ID identifier usually representing an ID from a 3rd party system, often used during migration.</inlineHelpText>
    <label>External Task ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>