force-app/main/default/objects/Krow__Task__c/fields/Krow__Hours_Remaining_Billable__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hours_Remaining_Billable__c</fullName>
    <description>Total Scheduled Hours for the Task - Total Billable Hours Logged for the task.</description>
    <formula>Krow__Scheduled_Hours__c - Krow__Total_Hours_Billable_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Scheduled Hours for the Task - Total Billable Hours Logged for the task.</inlineHelpText>
    <label>Hours Remaining (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>