force-app/main/default/objects/Krow__Task__c/fields/Krow__Hours_Remaining_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hours_Remaining_Estimated__c</fullName>
    <description>Estimated Hours for the Task - Total Hours Logged for the task.</description>
    <formula>Krow__Estimated_Hours__c -  Krow__Total_Hours_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Hours for the Task - Total Hours Logged for the task.</inlineHelpText>
    <label>Hours Remaining (Estimated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>