force-app/main/default/objects/Krow__Task__c/fields/Krow__Include_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, weekends (Sat/Sun) will be included in the duration and scheduling calculation.</description>
    <inlineHelpText>If checked, weekends (Sat/Sun) will be included in the duration and scheduling calculation.</inlineHelpText>
    <label>Include Weekends</label>
    <type>Checkbox</type>
</CustomField>