force-app/main/default/objects/Krow__Task__c/fields/Krow__Intacct_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Item_Id__c</fullName>
    <description>This is holds the item id created in Intacct for the billable task.</description>
    <label>Deprecated</label>
    <length>30</length>
    <type>Text</type>
</CustomField>