force-app/main/default/objects/Krow__Task__c/fields/Krow__Intacct_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Task_Id__c</fullName>
    <description>Intacct Task ID from Intacct.  Intacct integration configuration is required.</description>
    <inlineHelpText>Intacct Task ID from Intacct.  Intacct integration configuration is required.</inlineHelpText>
    <label>Intacct Task Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>