force-app/main/default/objects/Krow__Task__c/fields/Krow__Intacct_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Utilized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intacct Utilized?</label>
    <type>Checkbox</type>
</CustomField>