force-app/main/default/objects/Krow__Task__c/fields/Krow__Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents if the Milestone Payment for this task has been Invoiced.</description>
    <inlineHelpText>Represents if the Milestone Payment for this task has been Invoiced.</inlineHelpText>
    <label>Invoiced?</label>
    <type>Checkbox</type>
</CustomField>