force-app/main/default/objects/Krow__Task__c/fields/Krow__IsRecurrenceTask__c.field-meta.xml
<CustomField>
    <fullName>Krow__IsRecurrenceTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurrence Task</label>
    <type>Checkbox</type>
</CustomField>