force-app/main/default/objects/Krow__Task__c/fields/Krow__Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Item_Id__c</fullName>
    <description>An associated task Item, used for financial integrations such as Quickbooks.</description>
    <inlineHelpText>An associated task Item, used for financial integrations such as Quickbooks.</inlineHelpText>
    <label>Item Id</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>310</fullName>
            </value>
            <value>
                <fullName>320</fullName>
            </value>
            <value>
                <fullName>330</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>