force-app/main/default/objects/Krow__Task__c/fields/Krow__Jira_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Jira_Task_Id__c</fullName>
    <description>The Task ID of the Klient task created in JIRA.  Requires JIRA integration to be configured.</description>
    <inlineHelpText>The Task ID of the Krow task created in JIRA.  Requires JIRA integration to be configured.</inlineHelpText>
    <label>Jira Task Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>