force-app/main/default/objects/Krow__Task__c/fields/Krow__Lag_Days__c.field-meta.xml
<CustomField>
    <fullName>Krow__Lag_Days__c</fullName>
    <description>Lag represents is a delay between tasks which are linked by a dependency.</description>
    <inlineHelpText>Lag represents is a delay between tasks which are linked by a dependency.</inlineHelpText>
    <label>Lag Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>