force-app/main/default/objects/Krow__Task__c/fields/Krow__Milestone__c.field-meta.xml
<CustomField>
    <fullName>Krow__Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this task is a Milestone Task.</description>
    <inlineHelpText>Determines if this task is a Milestone Task.</inlineHelpText>
    <label>Milestone?</label>
    <type>Checkbox</type>
</CustomField>