force-app/main/default/objects/Krow__Task__c/fields/Krow__Milestone_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Milestone_Cost_Amount__c</fullName>
    <description>A fixed cost amount for this task, rolled up to the project.</description>
    <inlineHelpText>A fixed cost amount for this task, rolled up to the project.</inlineHelpText>
    <label>Fixed Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>