force-app/main/default/objects/Krow__Task__c/fields/Krow__Milestone_Payment__c.field-meta.xml
<CustomField>
    <fullName>Krow__Milestone_Payment__c</fullName>
    <description>A Milestone Payment amount as entered.  This amount is used by Invoicing to invoice this amount when the task is marked complete.</description>
    <inlineHelpText>A Milestone Payment amount as entered.  This amount is used by Invoicing to invoice this amount when the task is marked complete.</inlineHelpText>
    <label>Milestone Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>