force-app/main/default/objects/Krow__Task__c/fields/Krow__Milestone_Percent_Payment__c.field-meta.xml
<CustomField>
    <fullName>Krow__Milestone_Percent_Payment__c</fullName>
    <label>Milestone % Payment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>