force-app/main/default/objects/Krow__Task__c/fields/Krow__Number_of_Resources__c.field-meta.xml
<CustomField>
    <fullName>Krow__Number_of_Resources__c</fullName>
    <description>The number of resources required for this task as entered.</description>
    <inlineHelpText>The number of resources required for this task as entered.</inlineHelpText>
    <label>Number of Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>