force-app/main/default/objects/Krow__Task__c/fields/Krow__Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Parent_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A system generated field for parent task tracking.</description>
    <inlineHelpText>A system generated field for parent task tracking.</inlineHelpText>
    <label>Parent Task</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Child Tasks</relationshipLabel>
    <relationshipName>Child_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>